--- a/html/index.html
+++ b/html/index.html
@@ -13,14 +13,14 @@
         <img src="/img/perfil.png" alt="">
         <form action="">
             <div >
-                <input type="email" name="email" id="email "placeholder="Digite seu email" class="email" >
+                <input type="email" name="email" id="email "placeholder="Digite seu email" class="email" required="true">
             </div>
 
             <div>
-                <input class="senha" type="password" name="password" id="password" placeholder="email" placeholder="Digite sua senha">
+                <input class="senha" type="password" name="password" id="password" placeholder="email" placeholder="Digite sua senha"  required="true">
             </div>
             <div>
-                <input type="submit" value="Logar" id="">
+                <input class="submit" type="submit" value="Logar" id="">
             </div>
             
 
